// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Button Snapshot Tests renders disabled button correctly 1`] = `
<View
  accessibilityLabel="Disabled"
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": true,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "borderColor": "transparent",
        "borderRadius": 12,
        "borderWidth": 1,
        "flexDirection": "row",
        "justifyContent": "center",
        "marginVertical": 8,
      },
      {
        "padding": 14,
      },
      {
        "backgroundColor": "#00F5D4",
        "borderColor": "#00F5D4",
      },
      {
        "opacity": 0.5,
      },
      false,
      undefined,
    ]
  }
>
  <Text
    style={
      [
        {
          "fontWeight": "600",
        },
        {
          "fontSize": 16,
        },
        {
          "color": "#000000",
        },
        {},
      ]
    }
  >
    Disabled
  </Text>
</View>
`;

exports[`Button Snapshot Tests renders large button correctly 1`] = `
<View
  accessibilityLabel="Large"
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "borderColor": "transparent",
        "borderRadius": 12,
        "borderWidth": 1,
        "flexDirection": "row",
        "justifyContent": "center",
        "marginVertical": 8,
      },
      {
        "padding": 18,
      },
      {
        "backgroundColor": "#00F5D4",
        "borderColor": "#00F5D4",
      },
      false,
      false,
      undefined,
    ]
  }
>
  <Text
    style={
      [
        {
          "fontWeight": "600",
        },
        {
          "fontSize": 20,
        },
        {
          "color": "#000000",
        },
        {},
      ]
    }
  >
    Large
  </Text>
</View>
`;

exports[`Button Snapshot Tests renders loading button correctly 1`] = `
<View
  accessibilityLabel="Loading"
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": true,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "borderColor": "transparent",
        "borderRadius": 12,
        "borderWidth": 1,
        "flexDirection": "row",
        "justifyContent": "center",
        "marginVertical": 8,
      },
      {
        "padding": 14,
      },
      {
        "backgroundColor": "#00F5D4",
        "borderColor": "#00F5D4",
      },
      {
        "opacity": 0.5,
      },
      false,
      undefined,
    ]
  }
>
  <ActivityIndicator
    color="#000000"
  />
</View>
`;

exports[`Button Snapshot Tests renders primary button correctly 1`] = `
<View
  accessibilityLabel="Calcular"
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "borderColor": "transparent",
        "borderRadius": 12,
        "borderWidth": 1,
        "flexDirection": "row",
        "justifyContent": "center",
        "marginVertical": 8,
      },
      {
        "padding": 14,
      },
      {
        "backgroundColor": "#00F5D4",
        "borderColor": "#00F5D4",
      },
      false,
      false,
      undefined,
    ]
  }
>
  <Text
    style={
      [
        {
          "fontWeight": "600",
        },
        {
          "fontSize": 16,
        },
        {
          "color": "#000000",
        },
        {},
      ]
    }
  >
    Calcular
  </Text>
</View>
`;

exports[`Button Snapshot Tests renders secondary button correctly 1`] = `
<View
  accessibilityLabel="Cancelar"
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "borderColor": "transparent",
        "borderRadius": 12,
        "borderWidth": 1,
        "flexDirection": "row",
        "justifyContent": "center",
        "marginVertical": 8,
      },
      {
        "padding": 14,
      },
      {
        "backgroundColor": "transparent",
        "borderColor": "#2C3036",
      },
      false,
      false,
      undefined,
    ]
  }
>
  <Text
    style={
      [
        {
          "fontWeight": "600",
        },
        {
          "fontSize": 16,
        },
        {
          "color": "#FFFFFF",
        },
        {},
      ]
    }
  >
    Cancelar
  </Text>
</View>
`;

exports[`Button Snapshot Tests renders small button correctly 1`] = `
<View
  accessibilityLabel="Small"
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "borderColor": "transparent",
        "borderRadius": 12,
        "borderWidth": 1,
        "flexDirection": "row",
        "justifyContent": "center",
        "marginVertical": 8,
      },
      {
        "padding": 10,
      },
      {
        "backgroundColor": "#00F5D4",
        "borderColor": "#00F5D4",
      },
      false,
      false,
      undefined,
    ]
  }
>
  <Text
    style={
      [
        {
          "fontWeight": "600",
        },
        {
          "fontSize": 14,
        },
        {
          "color": "#000000",
        },
        {},
      ]
    }
  >
    Small
  </Text>
</View>
`;
